feat: add browser his flow into keycloak