@@ -1,16 +1,20 @@
 package com.example.his;
 
-import org.keycloak.authentication.*;
+import jakarta.ws.rs.core.MultivaluedMap;
+import org.keycloak.authentication.Authenticator;
+import org.keycloak.authentication.AuthenticationFlowContext;
+import org.keycloak.authentication.AuthenticationFlowError;
 import org.keycloak.models.*;
-import org.keycloak.services.managers.AuthenticationManager;
 
-import java.util.List;
-import java.util.Objects;
+import java.util.Collections;
+import java.util.Map;
+import java.util.Optional;
 
 public class HisCodeAuthenticator implements Authenticator {
+
   @Override
   public void authenticate(AuthenticationFlowContext ctx) {
-    var qp = ctx.getHttpRequest().getUri().getQueryParameters();
+    MultivaluedMap<String, String> qp = ctx.getHttpRequest().getUri().getQueryParameters();
     String hisCode = qp.getFirst("his_code");
 
     if (hisCode == null || hisCode.isBlank()) {
@@ -18,42 +22,50 @@ public class HisCodeAuthenticator implements Authenticator {
       return;
     }
 
-    // Read config from component
-    var cfg = ctx.getAuthenticatorConfig() != null ? ctx.getAuthenticatorConfig().getConfig() : java.util.Map.of();
-    String url     = cfg.getOrDefault("hisEndpoint", "");
-    String apiKey  = cfg.getOrDefault("hisApiKey", "");
-    int timeoutMs  = Integer.parseInt(cfg.getOrDefault("timeoutMs", "3000"));
-    boolean failOnInvalid = Boolean.parseBoolean(cfg.getOrDefault("failOnInvalid","true"));
+    Map<String, String> cfg = Optional.ofNullable(ctx.getAuthenticatorConfig())
+      .map(ac -> ac.getConfig())
+      .orElse(Collections.emptyMap());
+
+    String url       = cfg.getOrDefault("hisEndpoint", "");
+    String hdrName   = cfg.getOrDefault("hisHeaderName", "accesstoken");
+    String hdrValue  = cfg.getOrDefault("hisHeaderValue", "");
+    String restUser  = cfg.getOrDefault("hisRestUser", "");
+    String restPass  = cfg.getOrDefault("hisRestPass", "");
+    int timeoutMs    = Integer.parseInt(cfg.getOrDefault("timeoutMs", "4000"));
+    boolean insecure = Boolean.parseBoolean(cfg.getOrDefault("insecureTLS","false"));
+    boolean hardFail = Boolean.parseBoolean(cfg.getOrDefault("failOnInvalid","true"));
 
     HisClient.HisProfile prof;
     try {
-      prof = new HisClient(url, apiKey, timeoutMs).validate(hisCode);
+      prof = new HisClient(url, hdrName, hdrValue, restUser, restPass, timeoutMs, insecure)
+        .validate(hisCode);
     } catch (Exception e) {
-      if (failOnInvalid) { ctx.failure(AuthenticationFlowError.INTERNAL_ERROR); }
+      if (hardFail) { ctx.failure(AuthenticationFlowError.INTERNAL_ERROR); }
       else { ctx.attempted(); }
       return;
     }
 
     if (prof == null || prof.sub == null || prof.sub.isBlank()) {
-      if (failOnInvalid) { ctx.failure(AuthenticationFlowError.INVALID_CREDENTIALS); }
+      if (hardFail) { ctx.failure(AuthenticationFlowError.INVALID_CREDENTIALS); }
       else { ctx.attempted(); }
       return;
     }
 
-    // find or create user
     RealmModel realm = ctx.getRealm();
     KeycloakSession session = ctx.getSession();
-    UserModel user = session.users().getUserByUsername(realm, prof.sub);
+    UserProvider users = session.users();
+
+    UserModel user = users.getUserByUsername(realm, prof.sub);
     if (user == null) {
-      user = session.users().addUser(realm, prof.sub);
+      user = users.addUser(realm, prof.sub);
       user.setEnabled(true);
       if (prof.email != null) user.setEmail(prof.email);
       if (prof.givenName != null) user.setFirstName(prof.givenName);
       if (prof.familyName != null) user.setLastName(prof.familyName);
-      user.setSingleAttribute("hisSource","true");
+      user.setSingleAttribute("hisSource", "true");
     }
 
-    // optional: grant realm roles if they exist
+    // Optional: grant realm roles if they exist
     for (String r : prof.roles) {
       RoleModel role = realm.getRole(r);
       if (role != null) user.grantRole(role);
